Dll_Profit/Exemplo C++/profit.h

typedef struct
{
    wchar_t* ticker;
    wchar_t* bolsa;
    int feed;
} TAssetID;
////////////////////////////////////////////////////////////////////////////////
// WARNING: Não utilizar funções da dll dentro do CALLBACK
////////////////////////////////////////////////////////////////////////////////
//Callback do stado das diferentes conexões
typedef void(__stdcall* TStateCallback)(int nConnStateType, int nResult);
////////////////////////////////////////////////////////////////////////////////
//Callback com a lista de contas
typedef void(__stdcall* TAccountCallback)(int nCorretora,
    wchar_t* CorretoraNomeCompleto, wchar_t* AccountID, wchar_t* NomeTitular);
typedef void(__stdcall* THistoryTradeCallback)(TAssetID assetId,
    wchar_t* date,
    unsigned int nTradeNumber,
    double price, double vol,
    int qtd, int buyAgent, int sellAgent, int tradeType);
typedef void(__stdcall* TChangeStateTicker)(TAssetID assetId, wchar_t* date, int nState);
typedef void(__stdcall* TTinyBookCallback)(TAssetID assetId, double price, int qtd, int side);
////////////////////////////////////////////////////////////////////////////////
//Callback com informações marketData

typedef void(__stdcall* TPriceBookCallback)(TAssetID assetId,
    int nAction, int nPosition, int Side, int nQtd, int nCount,
    double sPrice,
    void* pArraySell, void* pArrayBuy);
typedef void(__stdcall* TOfferBookCallback)(TAssetID assetId,
    int nAction, int nPosition, int Side, int nQtd, int nAgent, __int64 nOfferID,
    double sPrice,
    int bHasPrice, int bHasQtd, int bHasDate, int bHasOfferID, int bHasAgent,
    wchar_t* date,
    void* pArraySell, void* pArrayBuy);
typedef void(__stdcall* TChangeCotation)(TAssetID assetId, wchar_t* date, unsigned int nTradeNumber, double sPrice);
typedef void(__stdcall* TAssetListInfoCallback)(TAssetID assetId, wchar_t* strName, wchar_t* strDescription, int nMinOrderQtd, int nMaxOrderQtd, int nLote, int stSecurityType, int ssSecuritySubType, double sMinPriceIncrement, double sContractMultiplier, wchar_t* strDate, wchar_t* strISIN);
typedef void(__stdcall* TAssetListInfoCallbackV2)(TAssetID assetId, wchar_t* strName, wchar_t* strDescription, int nMinOrderQtd, int nMaxOrderQtd, int nLote, int stSecurityType, int ssSecuritySubType, double sMinPriceIncrement, double sContractMultiplier, wchar_t* strDate, wchar_t* strISIN, wchar_t* strSetor, wchar_t* strSubSetor, wchar_t* strSegmento);
typedef void(__stdcall* TAssetListCallback)(TAssetID assetId, wchar_t* strName);
typedef void(__stdcall* TInvalidTickerCallback)(TAssetID assetId);
typedef void(__stdcall* TAdjustHistoryCallback)(TAssetID assetId, double sValue, wchar_t* strAdjustType, wchar_t* strObserv, wchar_t* dtAjuste, wchar_t* dtDeliber, wchar_t* dtPagamento, int nAffectPrice);
typedef void(__stdcall* TAdjustHistoryCallbackV2)(TAssetID assetId, double sValue, wchar_t* strAdjustType, wchar_t* strObserv, wchar_t* dtAjuste, wchar_t* dtDeliber, wchar_t* dtPagamento, int nFlags, double dMult);
typedef void(__stdcall* TTheoreticalPriceCallback)(TAssetID assetId, double dTheoreticalPrice, __int64 nTheoreticalQtd);
typedef int(__stdcall* SetChangeCotationCallback)(TChangeCotation ChangeCotation);
typedef int(__stdcall* SetAssetListCallback)(TAssetListCallback AssetListCallback);
typedef int(__stdcall* SetAssetListInfoCallback)(TAssetListInfoCallback AssetListInfoCallback);
typedef int(__stdcall* SetAssetListInfoCallbackV2)(TAssetListInfoCallbackV2 AssetListInfoCallbackV2);
typedef int(__stdcall* SetInvalidTickerCallback)(TInvalidTickerCallback InvalidTickerCallback);
typedef int(__stdcall* SetAdjustHistoryCallback)(TAdjustHistoryCallback AdjustHistoryCallback);
typedef int(__stdcall* SetAdjustHistoryCallbackV2)(TAdjustHistoryCallbackV2 AdjustHistoryCallbackV2);
typedef int(__stdcall* SetChangeStateTickerCallback)(TChangeStateTicker ChangeState);
typedef int(__stdcall* SetTheoreticalPriceCallback)(TTheoreticalPriceCallback ChangeState);