Dll_Profit/Exemplo Delphi/Wrapper/functionWrapperU.pas


function  SetStateCallback             (const a_StateCallback            : TStateCallback)            : Integer; stdcall; external c_strDLLPath;
function  SetAssetListCallback         (const a_AssetListCallback        : TAssetListCallback)        : Integer; stdcall; external c_strDLLPath;
function  SetAssetListInfoCallback     (const a_AssetListInfoCallback    : TAssetListInfoCallback)    : Integer; stdcall; external c_strDLLPath;
function  SetAssetListInfoCallbackV2   (const a_AssetListInfoCallbackV2  : TAssetListInfoCallbackV2)  : Integer; stdcall; external c_strDLLPath;
function  SetInvalidTickerCallback     (const a_InvalidTickerCallback    : TInvalidTickerCallback)    : Integer; stdcall; external c_strDLLPath;
function  SetTradeCallback             (const a_TradeCallback            : TTradeCallback)            : Integer; stdcall; external c_strDLLPath;
function  SetHistoryTradeCallback      (const a_HistoryTradeCallback     : THistoryTradeCallback)     : Integer; stdcall; external c_strDLLPath;
function  SetDailyCallback             (const a_DailyCallback            : TDailyCallback)            : Integer; stdcall; external c_strDLLPath;
function  SetTheoreticalPriceCallback  (const a_TheoreticalPriceCallback : TTheoreticalPriceCallback) : Integer; stdcall; external c_strDLLPath;
function  SetTinyBookCallback          (const a_TinyBookCallback         : TTinyBookCallback)         : Integer; stdcall; external c_strDLLPath;
function  SetChangeCotationCallback    (const a_ChangeCotation           : TChangeCotation)           : Integer; stdcall; external c_strDLLPath;
function  SetChangeStateTickerCallback (const a_ChangeStateTicker        : TChangeStateTicker)        : Integer; stdcall; external c_strDLLPath;
function  SetSerieProgressCallback     (const a_SerieProgressCallback    : TProgressCallback)         : Integer; stdcall; external c_strDLLPath;
function  SetOfferBookCallback         (const a_OfferBookCallback        : TOfferBookCallback)        : Integer; stdcall; external c_strDLLPath;
function  SetOfferBookCallbackV2       (const a_OfferBookCallbackV2      : TOfferBookCallbackV2)      : Integer; stdcall; external c_strDLLPath;
function  SetPriceBookCallback         (const a_PriceBookCallback        : TPriceBookCallback)        : Integer; stdcall; external c_strDLLPath;
function  SetPriceBookCallbackV2       (const a_PriceBookCallbackV2      : TPriceBookCallbackV2)      : Integer; stdcall; external c_strDLLPath;
function  SetAdjustHistoryCallback     (const a_AdjustHistoryCallback    : TAdjustHistoryCallback)    : Integer; stdcall; external c_strDLLPath;
function  SetAdjustHistoryCallbackV2   (const a_AdjustHistoryCallbackV2  : TAdjustHistoryCallbackV2)  : Integer; stdcall; external c_strDLLPath;

function  SetTradeCallbackV2           (const a_TradeCallbackV2          : TConnectorTradeCallback)   : Integer; stdcall; external c_strDLLPath;
function  SetHistoryTradeCallbackV2    (const a_HistoryTradeCallbackV2   : TConnectorTradeCallback)   : Integer; stdcall; external c_strDLLPath;

function  SetAccountCallback           (const a_AccountCallback          : TAccountCallback)          : Integer; stdcall; external c_strDLLPath;
function  SetHistoryCallback           (const a_HistoryCallback          : THistoryCallback)          : Integer; stdcall; external c_strDLLPath;
function  SetHistoryCallbackV2         (const a_HistoryCallbackV2        : THistoryCallbackV2)        : Integer; stdcall; external c_strDLLPath;
function  SetOrderChangeCallback       (const a_OrderChangeCallback      : TOrderChangeCallback)      : Integer; stdcall; external c_strDLLPath;
function  SetOrderChangeCallbackV2     (const a_OrderChangeCallbackV2    : TOrderChangeCallbackV2)    : Integer; stdcall; external c_strDLLPath;

function  SetOrderCallback             (const a_OrderCallback            : TConnectorOrderCallback)   : Integer; stdcall; external c_strDLLPath;
function  SetOrderHistoryCallback      (const a_OrderHistoryCallback     : TConnectorAccountCallback) : Integer; stdcall; external c_strDLLPath;

implementation
end.
